--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=8000
 USER=COMPANY
 
 # Database connection string
-CONNECTION_STRING=postgres://tbguktsj:D9KEfaC4I1--mCbPPpXWqKKsZQ5z1vMS@john.db.elephantsql.com:5432/tbguktsj
+CONNECTION_STRING=postgres://dunmkehg:rSKYeAWVOmqn3PYl6x2Y_UKlXYz0nFUX@john.db.elephantsql.com:5432/dunmkehg
