--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=8000
 USER=COMPANY
 
 # Database connection string
-CONNECTION_STRING=postgres://dunmkehg:rSKYeAWVOmqn3PYl6x2Y_UKlXYz0nFUX@john.db.elephantsql.com:5432/dunmkehg
+CONNECTION_STRING=postgres://ymrwrren:SzaRM_tGOsn0X2eo7TY4j9-EDnAfmwh1@john.db.elephantsql.com:5432/ymrwrren
